crates/ui-macros/tests/compile-fail/empty_connected.rs
use poly_ui_macros::connected;

#[connected()]
fn SomeRoute() {}
